@@ -17,6 +17,9 @@ Client library:
 - Initialise sockpairR/W to invalid in `mosquitto_reinitialise()` to avoid
   closing invalid sockets in `mosquitto_destroy()` on error. Closes #2326.
 
+Clients:
+- Fix date format in mosquitto_sub output. Closes #2353.
+
 
 2.0.12 - 2021-08-31
 ===================
